--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "main": "index.js",
   "scripts": {
     "format": "prettier --config .prettierrc --write \"src/**/*.{ts,js}\"",
-    "tsx": "tsx"
+    "tsx": "tsx",
+    "drizzle": "drizzle-kit"
   },
   "repository": {
     "type": "git",
@@ -19,14 +20,20 @@
   "description": "",
   "devDependencies": {
     "@types/node": "^24.2.1",
+    "@types/pg": "^8.15.5",
     "commander": "^14.0.0",
     "documentation": "^14.0.3",
     "dotenv": "^17.2.1",
+    "drizzle-kit": "^0.31.4",
     "fast-glob": "^3.3.3",
     "prettier": "^3.6.2",
     "tsx": "^4.20.3",
     "typedoc": "^0.28.10",
     "typescript": "^5.9.2",
     "typings": "^2.1.1"
+  },
+  "dependencies": {
+    "drizzle-orm": "^0.44.4",
+    "pg": "^8.16.3"
   }
 }
