--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   "dependencies": {
     "@json2csv/plainjs": "^7.0.6",
     "drizzle-orm": "^0.44.4",
+    "drizzle-seed": "^0.3.1",
     "pg": "^8.16.3"
   }
 }
