--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@json2csv/plainjs": "^7.0.6",
     "drizzle-orm": "^0.44.4",
     "drizzle-seed": "^0.3.1",
+    "lodash": "^4.17.21",
     "pg": "^8.16.3"
   }
 }
