--- a/.github/workflows/import-resource-file-info.yml
+++ b/.github/workflows/import-resource-file-info.yml
@@ -1,7 +1,7 @@
 on:
   push:
-    branches:
-      - master
+    paths:
+      - 'resources/**'
 
 name: import-resource-file-info
 jobs:
@@ -13,6 +13,8 @@ jobs:
         node-version: [22.x]
     steps:
     - uses: actions/checkout@v4
+      with:
+        fetch-depth: 0
     - name: setup ubuntu
       run: |
         sudo apt-get --quiet update --yes
@@ -37,3 +39,12 @@ jobs:
       run:  yarn run tsx src/cli.ts import glogfile
     - name: export to csv
       run:  yarn run tsx src/cli.ts export csv
+    - name: commit & push
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      run: |
+        git config --local user.email "github-actions[bot]@users.noreply.github.com"
+        git config --local user.name "github-actions[bot]"
+        git add data/
+        git commit -m "update resource fileinfo $(date '+%Y-%m-%d %H:%M:%S')"
+        git push origin ${{ github.ref_name }}
